tests/errors/min_02.f90
program min_02
    character(8) :: y
    character :: z
    print *, min(y, z)
end program